INCLUDE_DIRECTORIES("${CURRENT_PROC_PATH}")
INCLUDE_DIRECTORIES("${CURRENT_ARCH_PATH}/common/include")
INCLUDE_DIRECTORIES("${CURRENT_PROC_PATH}/include")
INCLUDE_DIRECTORIES("${KERNEL_LIBRARY_DIR}/include")
INCLUDE_DIRECTORIES(include)

SET(BOARD_SOURCES
    src/Board.cpp
    src/UART.cpp
    src/Watchdog.cpp
    )

ADD_LIBRARY(libboard STATIC ${BOARD_SOURCES})
TARGET_LINK_LIBRARIES(libboard libcpu)