SET(BOOT_SOURCES
    boot.S)

ADD_LIBRARY(bootloader OBJECT ${BOOT_SOURCES})
SET_TARGET_PROPERTIES(bootloader PROPERTIES LINKER_LANGUAGE ASM)

ADD_EXECUTABLE(hack_cmake_to_get_bootloader_object $<TARGET_OBJECTS:bootloader>)
SET_TARGET_PROPERTIES(hack_cmake_to_get_bootloader_object PROPERTIES
    RULE_LAUNCH_LINK
    "${CMAKE_SOURCE_DIR}/CMakeScripts/cps ${CMAKE_CURRENT_BINARY_DIR} <OBJECTS> --"
)

SET(LINKER_TO_GENERATE  "${CMAKE_CURRENT_SOURCE_DIR}/config/linker.ld.in")
SET(LINKER_GENERATED    "${CMAKE_CURRENT_BINARY_DIR}/config/linker.ld" CACHE STRINGS "Generated linker script")
SET(BOOTLOADER_OBJECT   "${CMAKE_CURRENT_BINARY_DIR}/boot.S.o")

CONFIGURE_FILE(${LINKER_TO_GENERATE} ${LINKER_GENERATED})

INCLUDE_DIRECTORIES("${KERNEL_LIBRARY_DIR}/include")
INCLUDE_DIRECTORIES(include)

SET(CPU_SOURCES
    src/CPU.cpp
    src/Memory.cpp)

ADD_LIBRARY(libcpu STATIC ${CPU_SOURCES})
TARGET_LINK_LIBRARIES(libcpu libarm)